--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	</head>
 	<body>
         <div id="app">
-            <p>{{ title }}</p>
         </div>
         
         <script>
             new Vue({
                 el: '#app',
                 data: {
-                    title: 'Hello World!'
+                },
+                methods: {
                 }
             });
         </script>
