--- a/index_dynamic_css_2.html
+++ b/index_dynamic_css_2.html
@@ -18,34 +18,32 @@
         		display:inline-block;
         		margin: 10px;
     		}
-    		.red{background-color:red;}
-    		.green{background-color:green;}
-    		.blue{background-color:blue;}
 		</style>
 	</head>
 	<body>
         <div id="app">
-            <div class="demo" @click="attachRed = !attachRed" :class="divClasses"></div>
-            <div class="demo" :class="{red: attachRed}"></div>
-            <div class="demo" :class="[color, {red: attachRed}]"></div>
+            <div class="demo" :style="{'background-color': color}"></div>
+            <div class="demo" :style="myStyle"></div>
+            <div class="demo" :style="[myStyle, {height: width + 'px'}]"></div>
             <hr>
             <input type="text" v-model="color">
+            <input type="text" v-model="width">
         </div>
         
         <script>
             new Vue({
                 el: '#app',
                 data: {
-                    attachRed: false,
-                    color: 'green'
+                    color: 'gray',
+                    width: 100
                 },
                 computed: {
-                    divClasses: function(){
-                        return{
-                            red: this.attachRed,
-                            blue: !this.attachRed
+                    myStyle: function(){
+                        return {
+                            backgroundColor: this.color,
+                            width:this .width + 'px'
                         };
-                    }  
+                    }
                 }
             });
         </script>
